# client-side_coursework

./: CMakeLists.txt  README.md
src/: main.cpp
src/common/: config.h
src/connection/: connection_utils.cpp  connection_utils.h
src/session/: client_session.cpp  client_session.h
src/sockets/: socket_utils.cpp
src/winsock/: winsock_utils.cpp  winsock_utils.h
